2009-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* 0.22.1 release

2009-04-27  Mark Ellis  <mark@mpellis.org.uk>

	* fix for librra RRA_SyncMgrType

2009-04-03  Mark Ellis  <mark@mpellis.org.uk>

	* build system changes
	* pass NULL to syncmgr_connect as ip to listen on

2009-03-23  Mark Ellis  <mark@mpellis.org.uk>

	* restructure most of main plugin code to reduce code duplication for
	  different item types, and allow flagging of success for only those
	  items that were successfully converted and synced
	* connect and disconnect with device in appropriate places
	* obtain codepage from device registry

2009-03-17  Mark Ellis  <mark@mpellis.org.uk>

	* src/synce_plugin.c - add UTF8 flag to all conversions, and pass
	  a codepage to modified rra conversion funcs





version 0.01: initial version, only contact sync working... very buggy ;)
version 0.02: added appointment and todo handling, but still very buggy.. ;)

* Add preliminary support for configuration (as outlined by OpenSync).
* Add a source file to support synchronizing files on the WinCE device,
  hook it up to the main plugin source.

version 0.03: bugfixes: connection hangup after commit // calendar report wrong object type

* Make the configuration work for file sync (allows specifying more than one
  directory to synchronize).
* Add some test code to learn how to work with SynCE. There's also a simple
  test program hidden in src/synce_file.c that currently lists all the files
  it finds on the WinCE device.
* More of the necessary hookups between SynCE's file access and OpenSync are
  now in place but the implementation is still incomplete and crashes.

* Strip some functionality from the XML based configuration. Only one
  directory can be specified, and the other stuff is meant to disappear too - 
  only the mechanism for enabling/disabling stuff from the GUI is to remain.
  This is as Armin suggested.

* Rename the structure in synce_plugin.h so it has "synce" in its name. Make