@@ -1,3 +1,8 @@
+2012-05-27  Mark Ellis  <mark@mpellis.org.uk>
+
+	* drop references to librapi2 to use synce-core
+	* remove -Wall -Werror from CFLAGS
+
 2009-07-16  Mark Ellis  <mark@mpellis.org.uk>
 
 	* 0.22.1 release
